return early